--- a/readme/nonnon_paint.html
+++ b/readme/nonnon_paint.html
@@ -291,7 +291,7 @@
 
 	largest editable size
 
-		20000 x 20000
+		32767 x 32767 pixels
 
 </pre>
 
@@ -846,6 +846,13 @@
 		+ yellow color is blended when alpha has non-visible value
 
 		+ Nonnon Paint remembers the last setting
+
+
+	Pressure
+
+		use a pressure parameter
+
+		+ for buggy tablet driver
 
 	---
 
