--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -265,8 +265,10 @@
 
 		drop to load
 
-		+ .WAV only
-		+ .MP3 is not supported
+		[ Supported Format ]
+
+			+ .WAV
+			+ some .MP3 or .M4A files are available (load only)
 
 
 	Limitation
@@ -278,6 +280,10 @@
 		no seed generation
 
 			+ you can use your smartphone or MIDI recorder app to make seed
+
+		window (plotter area) is non-resizable
+
+			+ samples to display will be skipped (details are lost)
 
 
 	Plotter
@@ -291,7 +297,6 @@
 				set position
 
 			drag
-
 				select area
 
 			Shift
@@ -316,6 +321,10 @@
 
 			Mute
 				set zero
+
+			Copy Left to Right
+			Copy Right to Left
+				make monaural compatible data
 
 			Fade-In
 			Fade-Out
