--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -288,7 +288,7 @@
 
 	Plotter
 
-		Upper :  Left Channel
+		Upper : Left Channel
 		Lower : Right Channel
 
 		Input
@@ -307,6 +307,9 @@
 
 				+ apply a channel under cursor
 
+			Backspace
+				delete
+
 		Menu
 
 			Undo
@@ -315,8 +318,7 @@
 			Cut
 			Copy
 			Paste
-			Delete
-			Insert
+			Overwrite/Mix
 				edit
 
 			Mute
@@ -329,6 +331,9 @@
 			Fade-In
 			Fade-Out
 				fade effect
+
+			Smoother
+				Savitzky-Golay Filter
 
 
 	Icon Buttons
