--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -279,7 +279,7 @@
 
 		no seed generation
 
-			+ you can use your smartphone or MIDI recorder app to make seed
+			+ you can use your smartphone, MIDI recorder apps or AI to make seed
 
 		window (plotter area) is non-resizable
 
@@ -294,7 +294,7 @@
 		Input
 
 			click
-				set position
+				set/reset position
 
 			drag
 				select area
@@ -309,6 +309,9 @@
 
 			Backspace
 				delete
+
+			F2
+				rename by date
 
 		Menu
 
@@ -346,17 +349,27 @@
 
 			+ drop and effects behavior will change
 
+			+ you can do Delay, Feedback, Chorus and etc.
+
 		Stop
 			stop playback
 
-		Play
-			playback
+		Play / Pause
+			playback / pause
 
 		Equalizer
 			open a graphic equalizer window
 
+			[ How to Use Analyzer ]
+
+			1 : press "Analyze" button
+			2 : set sliders zero if the bands are used
+			3 : press "Apply" to make sound clear
+
+			+ "Mix" is not supported
+
 		Resizer
-			resize whole data
+			resize whole data by msec.
 
 		Formatter / Save
 			save as specified format
