--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -327,6 +327,9 @@
 			Mute
 				set zero
 
+			Monaural
+				sync L/R channels
+
 			Copy Left to Right
 			Copy Right to Left
 				make monaural compatible data
@@ -340,6 +343,12 @@
 
 			Overdirve
 				Distortion-like Filter
+
+			White Noise
+			Pink Noise
+				noise generator
+
+					+ mix always
 
 
 	Icon Buttons
