--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -296,6 +296,9 @@
 			click
 				set/reset position
 
+			double-click
+				select all
+
 			drag
 				select area
 
@@ -317,6 +320,14 @@
 
 			Undo
 				undo
+
+			Select All
+				select all
+
+			Unselect
+				release selection
+
+				+ you can click empty area in a window to unselect
 
 			Cut
 			Copy
