--- a/readme/nn2.html
+++ b/readme/nn2.html
@@ -405,6 +405,10 @@
 
 					trim
 
+				Nonnon Nyaurism (Mac)
+
+					arrange
+
 			dokan.wav
 
 				iPhone Voice Memo
@@ -434,7 +438,7 @@
 
 					trim
 
-			water.wav
+			water.mp3
 
 				http://www.freesoundslibrary.com
 
