--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -302,11 +302,13 @@
 			drag
 				select area
 
+				partial : re-selection (frame only moved)
+
 			Shift
 				move data
 
-			Shift + Cmd
-				move Left or Right
+			Command
+				select one of Left or Right
 
 				+ apply a channel under cursor
 
@@ -388,8 +390,6 @@
 			1 : press "Analyze" button
 			2 : set sliders zero if the bands are used
 			3 : press "Apply" to make sound clear
-
-			+ "Mix" is not supported
 
 		Resizer
 			resize whole data by msec.
