--- a/readme/nonnon_nyaurism.html
+++ b/readme/nonnon_nyaurism.html
@@ -357,6 +357,9 @@
 			Overdirve
 				Distortion-like Filter
 
+			Tremolo
+				LFO Filter : 3 Hz
+
 			White Noise
 			Pink Noise
 				noise generator
